force-app/main/default/objects/Quote/fields/dtmAplicarpreciopartner__c.field-meta.xml
<CustomField>
    <fullName>dtmAplicarpreciopartner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DTT-240527-Campo que hace el cambio de precio Base a precio Partner</description>
    <inlineHelpText>“El descuento que se aplicará será el de nivel” Oro, Platino, Plata (según corresponda en nivel del Partner)</inlineHelpText>
    <label>Aplicar precio partner</label>
    <type>Checkbox</type>
</CustomField>