force-app/main/default/objects/Quote/fields/dtmCentroDeDatosCheckbox__c.field-meta.xml
<CustomField>
    <fullName>dtmCentroDeDatosCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CentroDe Datos Checkbox</label>
    <type>Checkbox</type>
</CustomField>