force-app/main/default/objects/Quote/fields/dtmContactoBusiness__c.field-meta.xml
<CustomField>
    <fullName>dtmContactoBusiness__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre del contacto</label>
    <referenceTo>dtmContactoBusiness__c</referenceTo>
    <relationshipLabel>Cotizaciones</relationshipLabel>
    <relationshipName>Cotizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>