force-app/main/default/objects/Quote/fields/dtmDireccionamientoCheckbox__c.field-meta.xml
<CustomField>
    <fullName>dtmDireccionamientoCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direccionamiento Checkbox</label>
    <type>Checkbox</type>
</CustomField>