force-app/main/default/objects/Quote/fields/dtmFolioGis__c.field-meta.xml
<CustomField>
    <fullName>dtmFolioGis__c</fullName>
    <label>Folio Gis</label>
    <length>60</length>
    <type>Text</type>
</CustomField>