force-app/main/default/objects/Quote/fields/dtmFolioNmp__c.field-meta.xml
<CustomField>
    <fullName>dtmFolioNmp__c</fullName>
    <label>Folio Nmp</label>
    <length>50</length>
    <type>Text</type>
</CustomField>