force-app/main/default/objects/Quote/fields/dtmFolioOdin__c.field-meta.xml
<CustomField>
    <fullName>dtmFolioOdin__c</fullName>
    <label>Folio Odin</label>
    <length>60</length>
    <type>Text</type>
</CustomField>