force-app/main/default/objects/Quote/fields/dtmMensajeError__c.field-meta.xml
<CustomField>
    <fullName>dtmMensajeError__c</fullName>
    <label>Mensaje Error</label>
    <type>TextArea</type>
</CustomField>