force-app/main/default/objects/Quote/fields/dtmMensajeErrorLargo__c.field-meta.xml
<CustomField>
    <fullName>dtmMensajeErrorLargo__c</fullName>
    <description>DTT-240816-MVP2-Campo para recibir el mensaje de error completo de la integración para contratar</description>
    <label>Mensaje de error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>