force-app/main/default/objects/Quote/fields/dtmOa__c.field-meta.xml
<CustomField>
    <fullName>dtmOa__c</fullName>
    <label>Oa/SubscriptionId</label>
    <length>15</length>
    <type>Text</type>
</CustomField>