force-app/main/default/objects/Quote/fields/dtmTotalListaUnico__c.field-meta.xml
<CustomField>
    <fullName>dtmTotalListaUnico__c</fullName>
    <formula>(dtmUnidadesCargoUnico__c * dtmTotalListaUnicoRoll__c) - dtmTotalListaUnicoRoll__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Lista Único</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>