force-app/main/default/objects/Quote/fields/dtmTotalRecurrenteMensual__c.field-meta.xml
<CustomField>
    <fullName>dtmTotalRecurrenteMensual__c</fullName>
    <label>Total Recurrente Mensual</label>
    <summarizedField>QuoteLineItem.dtmTotalRecurrente__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.vlocity_cmt__Recurring_UOM__c</field>
        <operation>equals</operation>
        <value>Mensual</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>