force-app/main/default/objects/Quote/recordTypes/dtmCotizacionTelmex.recordType-meta.xml
<RecordType>
    <fullName>dtmCotizacionTelmex</fullName>
    <active>true</active>
    <description>DTT-240320-MVP1-Tipo de registro especial para las cotizaciones del proyecto VARS</description>
    <label>Cotización Telmex</label>
</RecordType>