force-app/main/default/objects/Quote/validationRules/dtmBloqueoEstatusPerdida.validationRule-meta.xml
<ValidationRule>
    <fullName>dtmBloqueoEstatusPerdida</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND( ISPICKVAL(PRIORVALUE( Status ), &quot;Perdida&quot;), ISCHANGED( Status ) , OR( ISPICKVAL(Status, &quot;Validación&quot;),ISPICKVAL(Status, &quot;Negociación&quot;),ISPICKVAL(Status, &quot;Ganada&quot;),ISPICKVAL(Status, &quot;Revisión Técnica&quot;),ISPICKVAL(Status, &quot;Contratación&quot;),ISPICKVAL(Status, &quot;Entregado&quot;),ISPICKVAL(Status, &quot;Nuevo&quot;)),AND( $Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;,$Profile.Name &lt;&gt; &quot;Partner Account Manager&quot;)), true, false)</errorConditionFormula>
    <errorMessage>Lo sentimos, no se tiene permitido modificar la cotización en la etapa &quot;Perdida&quot;</errorMessage>
</ValidationRule>